# Sanctioned

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/dashboard/: .env.example  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/app/ask/: page.tsx
apps/dashboard/app/lender/[id]/: page.tsx
apps/dashboard/app/match/: page.tsx
apps/dashboard/app/policy-diff/: page.tsx
apps/dashboard/components/: BorrowerForm.tsx  DecisionBadge.tsx  MatchGrid.tsx  ReasonLedger.tsx
apps/dashboard/e2e/: aa.spec.ts  ask.spec.ts  bt.spec.ts  matching.spec.ts  new_loan.spec.ts  overview.spec.ts
apps/dashboard/lib/: api.ts  decision.ts  format.ts  types.ts
deploy/: Dockerfile.api  fly.toml
docs/: SPEC.md  data-sources.md  deploy.md  domain.md  integrations.md  runbook.md
scripts/: generate_personas.py  policy_diff_report.py  seed_copilot.py
